# django-bookstore

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: product_viewset.py
