[project]
name = "django-bookstore"
version = "0.1.0"
description = "Bookstore api"
authors = [
    {name = "Thiago",email = "thiagofeldmann06@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=5.1.5,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "serializers (>=0.2.4,<0.3.0)",
    "pytest-django (>=4.9.0,<5.0.0)",
    "django-extensions (>=3.2.3,<4.0.0)",
    "django-viewset (>=0.1.1,<0.2.0)",
    "django-debug-toolbar (>=5.0.1,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "isort (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
